/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto2";

package pulsar.schema;
option java_package = "org.apache.pulsar.broker.service.schema";
option optimize_for = SPEED;

message PositionInfo {
    required int64 ledgerId = 1;
    required int64 entryId = 2;
}

message IndexEntry {
    required int64 version = 1;
    required PositionInfo position = 2;
    required bytes hash = 3;
}

message SchemaEntry {
    required bytes schema_data = 2;
    repeated IndexEntry index = 5;
}

message SchemaLocator {
    required IndexEntry info = 1;
    repeated IndexEntry index = 2;
}